language/move-lang/tests/move_check/typing/borrow_local_temp_resource.exp
error[E06001]: unused value without 'drop'
  ┌─ tests/move_check/typing/borrow_local_temp_resource.move:7:17
  │
3 │     struct R {}
  │            - To satisfy the constraint, the 'drop' ability would need to be added here
  ·
6 │         &R{};
  │          ---
  │          │
  │          The value is created but not used. The value does not have the 'drop' ability and must be consumed before the function returns
  │          The type '0x8675309::M::R' does not have the ability 'drop'
7 │         &mut R{};
  │                 ^ Invalid return

error[E06001]: unused value without 'drop'
  ┌─ tests/move_check/typing/borrow_local_temp_resource.move:7:17
  │
3 │     struct R {}
  │            - To satisfy the constraint, the 'drop' ability would need to be added here
  ·
7 │         &mut R{};
  │              ---^ Invalid return
  │              │   
  │              The value is created but not used. The value does not have the 'drop' ability and must be consumed before the function returns
  │              The type '0x8675309::M::R' does not have the ability 'drop'

